# app/services/bank-api/docs/swagger.yaml
@@ -6,7 +6,7 @@ definitions:
         description: 'one of: USD, EUR, CAD'
         type: string
       name:
-        description: 3 - 20 characters long
+        description: less than 30 characters
         type: string
     required:
     - currency
@@ -68,10 +68,13 @@ definitions:
   authgrp.SignupRequest:
     properties:
       email:
+        description: Email address (Optional)
         type: string
       password:
+        description: 6 to 20 characters
         type: string
       username:
+        description: 3 to 20 characters, only letters and numbers
         type: string
     required:
     - password
@@ -182,6 +185,29 @@ definitions:
         type: string
     required:
     - status
+    type: object
+  taskcommon.State:
+    properties:
+      error:
+        description: The Error message if the task failed, otherwise omitted
+        type: string
+      id:
+        description: Task ID
+        type: string
+      status:
+        allOf:
+        - $ref: '#/definitions/taskcommon.Status'
+        description: One of "in_progress", "completed", "failed", or "other"
+      type:
+        description: Task Type
+        type: string
+    type: object
+  taskcommon.Status:
+    type: object
+  taskgrp.GetTaskResponse:
+    properties:
+      data:
+        $ref: '#/definitions/taskcommon.State'
     type: object
 host: localhost:3000
 info:
@@ -624,6 +650,33 @@ paths:
       summary: Signup
       tags:
       - Authentication
+  /task/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Inspect task state by ID
+      parameters:
+      - description: Task ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/taskgrp.GetTaskResponse'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+      security:
+      - Bearer: []
+      summary: Inspect task state by ID
+      tags:
+      - Task
 securityDefinitions:
   Bearer:
     description: Type "Bearer" followed by a space and JWT token.
